--- a/src/info2html/Makefile.am
+++ b/src/info2html/Makefile.am
@@ -2,8 +2,8 @@
 
 INCLUDES = 			\
 	-I$(includedir)		\
-	-I$(top_srcdir)/intl
-
+	-I$(top_srcdir)/intl    \
+	$(GNOME_INCLUDEDIR)	
 
 LDADD = \
 	$(GNOME_LIBDIR)					\
