Added `-I$(top_srcdir)/intl -I$(top_builddir)/intl' to `INCLUDES'.

--- a/src/info2html/Makefile.am
+++ b/src/info2html/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = 			\
 	-I$(includedir)		\
-	-I$(top_srcdir)/intl    \
+	-I$(top_srcdir)/intl -I$(top_builddir)/intl	\
 	$(GNOME_INCLUDEDIR)	
 
 LDADD = \
