do not link to gnome lib. added 'ko' subdir. korean help files
        * gnome-man2html/Makefile.am: do not link to gnome lib.
        * help/Makefile.am: added 'ko' subdir.
        * help/ko/*: korean help files

--- a/src/man2html/Makefile.am
+++ b/src/man2html/Makefile.am
@@ -5,10 +5,7 @@ INCLUDES = 			\
 	-I$(top_srcdir)/intl -I$(top_builddir)/intl
 
 
-LDADD = \
-	$(GNOME_LIBDIR)					\
-	$(GNOMEUI_LIBS)					\
-	$(INTLLIBS)
+LDADD =
 
 bin_PROGRAMS = gnome-man2html
 
