reviewed by: Christian Meyer <chrisime@gnome.org>
2001-03-06  Eric Fischer  <eric@eazel.com>

        reviewed by: Christian Meyer <chrisime@gnome.org>

        (Bug 7315.  Thanks to Christian Meyer for tracking down
        places where this needed to be fixed.)

        * components/help/converters/gnome-db2html2/Makefile.am:
        * components/help/converters/gnome-info2html2/Makefile.am:
        * cut-n-paste-code/widgets/e-paned/Makefile.am:
        * cut-n-paste-code/widgets/gimphwrapbox/Makefile.am:
        * cut-n-paste-code/widgets/nautilusclist/Makefile.am:
        * libnautilus-extensions/Makefile.am:
        In all of these, change GNOME_CFLAGS to GNOMEUI_CFLAGS so that
        they get the correct #include path for the GTK headers.

--- a/src/info2html/Makefile.am
+++ b/src/info2html/Makefile.am
@@ -3,7 +3,7 @@
 INCLUDES = 			\
 	-I$(includedir)		\
 	-I$(top_srcdir)/intl -I$(top_builddir)/intl	\
-	$(GNOME_CFLAGS)	
+	$(GNOMEUI_CFLAGS)	
 
 LDADD = \
 	$(GNOME_LIBS) $(Z_LIBS) $(BZ_LIBS)
