--- a/src/info2html/Makefile.am
+++ b/src/info2html/Makefile.am
@@ -6,4 +6,4 @@ bin_PROGRAMS = gnome2-info2html
 
 gnome2_info2html_SOURCES = main.c parse.c utils.c html.c data.h html.h parse.h utils.h version.h
 
-gnome2_info2html_LDADD = $(LIBGNOME_LIBS) $(BZ_LIBS)
+gnome2_info2html_LDADD = $(LIBGNOME_LIBS) $(Z_LIBS) $(BZ_LIBS)
