Exit when the window is closed.
2001-12-01  Richard Hult  <rhult@codefactory.se>

	* src/main.c (main): Exit when the window is closed.

	* src/*.c: Mark strings as translatable.

	* src/main.c (main): Init gettext.

	* acconfig.h: Add.

	* configure.in: Gettextize and intltoolize.

	* autogen.sh: Redirect to the installed one for gnome 2.

	* yelp.desktop.in: Desktop file.

	* Makefile.am: Add a desktop file and intltool rule for it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,17 @@
-SUBDIRS = src
+SUBDIRS = src po
+
+@INTLTOOL_DESKTOP_RULE@
+
+DESKTOP_IN_FILES=yelp.desktop.in
+DESKTOP_FILES=$(DESKTOP_IN_FILES:.desktop.in=.desktop)
+
+Applicationsdir = $(datadir)/gnome/apps/Applications
+Applications_DATA = $(DESKTOP_FILES)
+
+EXTRA_DIST = 				\
+	intltool-extract.in  		\
+	intltool-merge.in    		\
+	intltool-update.in		\
+	$(DESKTOP_IN_FILES)		\
+	$(DESKTOP_FILES)
+
