pass in GNOME_PROGRAM_STANDARD_PROPERTIES to gnome_program_init().
2001-12-02  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* src/main.c (main): pass in GNOME_PROGRAM_STANDARD_PROPERTIES to
	  gnome_program_init().

	* src/Makefile.am: Add some defines for the install paths.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,12 @@ INCLUDES =						\
 	-I$(top_srcdir)					\
 	-I$(includedir)					\
 	$(YELP_CFLAGS)					\
-	-DG_LOG_DOMAIN=\"Yelp\"
+	-DG_LOG_DOMAIN=\"Yelp\"				\
+	-DPREFIX=\""$(prefix)"\"			\
+	-DSYSCONFDIR=\""$(sysconfdir)"\"		\
+	-DDATADIR=\""$(datadir)"\"			\
+	-DLIBDIR=\""$(libdir)"\"
+
 
 bin_PROGRAMS = yelp
 
