--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,10 +5,10 @@ src/main.c
 src/metadata-parser.c
 src/scrollkeeper-parser.c
 src/yelp-base.c
-src/yelp-book.c
 src/yelp-history.c
 src/yelp-index.c
 src/yelp-keyword-db.c
+src/yelp-section.c
 src/yelp-toc.c
 src/yelp-view.c
 src/yelp-window.c
