replaced yelp-view.c with yelp-doc-view.c
2001-12-07  Mikael Hallendal  <micke@codefactory.se>

	* POTFILES.in: replaced yelp-view.c with yelp-doc-view.c

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,7 +8,7 @@ src/yelp-index.c
 src/yelp-keyword-db.c
 src/yelp-section.c
 src/yelp-toc.c
-src/yelp-view.c
+src/yelp-doc-view.c
 src/yelp-window.c
 
 yelp.desktop.in
