yelp-view -> yelp-doc-view.
2001-12-07  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (yelp_SOURCES): yelp-view -> yelp-doc-view.

	* src/yelp-window.c:
	- use yelp-doc-view instead of yelp-view.
	- update GUI after inspiration from M$ help.

	* src/yelp-doc-view.[ch]: renamed from yelp-view.[ch]

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,7 @@ yelp_SOURCES =						\
 	yelp-base.c		yelp-base.h		\
 	yelp-window.c 		yelp-window.h		\
 	yelp-toc.c    		yelp-toc.h		\
-	yelp-view.c		yelp-view.h		\
+	yelp-doc-view.c		yelp-doc-view.h		\
 	yelp-index.c		yelp-index.h		\
 	yelp-history.c		yelp-history.h		\
 	yelp-section.c		yelp-section.h		\
