Updated Swedish translation. Sorted.
2001-12-08  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.
	* POTFILES.in: Sorted.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,12 +1,13 @@
-src/yelp-main.c
+# Add files with translateable strings here.
+# Please keep this file sorted alphabetically.
+
 src/yelp-base.c
-src/yelp-scrollkeeper.c
+src/yelp-doc-view.c
 src/yelp-history.c
 src/yelp-index.c
+src/yelp-main.c
+src/yelp-scrollkeeper.c
 src/yelp-section.c
 src/yelp-toc.c
-src/yelp-doc-view.c
 src/yelp-window.c
-
 yelp.desktop.in
-
