added, will be the Home-view.
22001-12-09  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-home.c: added, will be the Home-view.

	* src/yelp-doc-view.[ch]: moved to yelp-view-doc.[ch]

	* src/Makefile.am (yelp_SOURCES): use yelp-view* instead of
	  yelp-*-view.

Almost done with the cleaning up, yay!

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,12 +2,13 @@
 # Please keep this file sorted alphabetically.
 
 src/yelp-base.c
-src/yelp-doc-view.c
 src/yelp-history.c
 src/yelp-index.c
 src/yelp-main.c
 src/yelp-scrollkeeper.c
 src/yelp-section.c
 src/yelp-toc.c
+src/yelp-view-doc.c
+src/yelp-view-home.c
 src/yelp-window.c
 yelp.desktop.in
