--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,16 +12,17 @@ INCLUDES =						\
 bin_PROGRAMS = yelp
 
 yelp_SOURCES =						\
-	yelp-main.c					\
 	yelp-base.c		yelp-base.h		\
-	yelp-window.c 		yelp-window.h		\
-	yelp-toc.c    		yelp-toc.h		\
-	yelp-doc-view.c		yelp-doc-view.h		\
-	yelp-index.c		yelp-index.h		\
 	yelp-history.c		yelp-history.h		\
+	yelp-index.c		yelp-index.h		\
+	yelp-main.c					\
 	yelp-section.c		yelp-section.h		\
 	yelp-scrollkeeper.c	yelp-scrollkeeper.h	\
-	yelp-util.c		yelp-util.h
+	yelp-toc.c    		yelp-toc.h		\
+	yelp-util.c		yelp-util.h		\
+	yelp-view-doc.c		yelp-view-doc.h		\
+	yelp-view-home.c	yelp-view-home.h	\
+	yelp-window.c 		yelp-window.h
 
 yelp_LDADD =						\
 	$(YELP_LIBS)
