--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,14 +14,14 @@ bin_PROGRAMS = yelp
 yelp_SOURCES =						\
 	yelp-base.c		yelp-base.h		\
 	yelp-history.c		yelp-history.h		\
-	yelp-index.c		yelp-index.h		\
+	yelp-html.c		yelp-html.h		\
 	yelp-main.c					\
 	yelp-section.c		yelp-section.h		\
 	yelp-scrollkeeper.c	yelp-scrollkeeper.h	\
-	yelp-toc.c    		yelp-toc.h		\
 	yelp-util.c		yelp-util.h		\
-	yelp-view-doc.c		yelp-view-doc.h		\
+	yelp-view-content.c	yelp-view-content.h	\
 	yelp-view-home.c	yelp-view-home.h	\
+	yelp-view-index.c	yelp-view-index.h	\
 	yelp-window.c 		yelp-window.h
 
 yelp_LDADD =						\
