--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 AC_INIT(src/yelp-main.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(Yelp, 0.01)
+AM_INIT_AUTOMAKE(yelp, 0.01)
 
 AC_PROG_INTLTOOL
 
