--- a/configure.in
+++ b/configure.in
@@ -27,7 +27,7 @@ GETTEXT_PACKAGE=yelp
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
 
-ALL_LINGUAS="az de sv uk wa"
+ALL_LINGUAS="az de no sv uk wa"
 AM_GLIB_GNU_GETTEXT
 
 if test "x$prefix" = "xNONE"; then
