Added "es" to ALL_LINGUAS. Updated Swedish translation.
2002-01-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "es" to ALL_LINGUAS.
	* po/sv.po: Updated Swedish translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
-
+src/GNOME_Yelp.server.in
 src/yelp-base.c
 src/yelp-history.c
 src/yelp-html.c
