Added "nl" to ALL_LINGUAS. Added missing files. Updated Swedish
2002-01-10  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "nl" to ALL_LINGUAS.
	* po/POTFILES.in: Added missing files.
	* po/sv.po: Updated Swedish translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,7 +4,9 @@ src/GNOME_Yelp.server.in
 src/yelp-base.c
 src/yelp-history.c
 src/yelp-html.c
+src/yelp-info.c
 src/yelp-main.c
+src/yelp-man.c
 src/yelp-scrollkeeper.c
 src/yelp-section.c
 src/yelp-util.c
