--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
 src/GNOME_Yelp.server.in
+src/gtktreemodelfilter.c
 src/yelp-base.c
 src/yelp-history.c
 src/yelp-html.c
