renamed from YelpViewHome.
2002-01-14  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.[ch]: renamed from YelpViewHome.

	* src/yelp-window.c: use YelpViewTOC instead of YelpViewHome.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,8 +23,8 @@ yelp_SOURCES =								\
 	yelp-scrollkeeper.c	yelp-scrollkeeper.h			\
 	yelp-util.c		yelp-util.h				\
 	yelp-view-content.c	yelp-view-content.h			\
-	yelp-view-home.c	yelp-view-home.h			\
 	yelp-view-index.c	yelp-view-index.h			\
+	yelp-view-toc.c		yelp-view-toc.h				\
 	yelp-window.c 		yelp-window.h
 
 yelp_LDADD =								\
