Install .desktop file into the proper location, and fix its Categories
2002-01-16  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* yelp.desktop.in:

	Install .desktop file into the proper location, and fix
	its Categories field. Use the gnome-help.png icon.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS = src po
 DESKTOP_IN_FILES=yelp.desktop.in
 DESKTOP_FILES=$(DESKTOP_IN_FILES:.desktop.in=.desktop)
 
-Applicationsdir = $(datadir)/gnome/apps/Applications
+Applicationsdir = $(datadir)/applications
 Applications_DATA = $(DESKTOP_FILES)
 
 EXTRA_DIST = 				\
