--- a/yelp.desktop.in
+++ b/yelp.desktop.in
@@ -2,8 +2,8 @@
 _Name=Yelp
 _Comment=GNOME Helpbrowser
 Exec=yelp
-Icon=gnome-unknown.png
+Icon=gnome-help.png
 Terminal=0
 Type=Application
 DocPath=
-Categories=Application;
+Categories=Application;Core;
