--- a/configure.in
+++ b/configure.in
@@ -15,7 +15,8 @@ AC_HEADER_STDC
 AM_PROG_LIBTOOL
 
 AM_PATH_ORBIT2
-
+AM_PATH_GLIB_2_0
+ 
 dnl NOTE : it appears that some systems do not like it when you use line
 dnl        continuation charactes to split CFLAGS into readable chunks
 CFLAGS="$CFLAGS -Wall -Wno-uninitialized -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith	 -Wno-sign-compare -Wsign-promo"
