the .list file has a -
2002-01-21  jacob berkman  <jacob@ximian.com>

	* src/Makefile.am (EXTRA_DIST): the .list file has a -

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -74,7 +74,7 @@ CLEANFILES =								\
 	GNOME_Yelp.server
 
 EXTRA_DIST =								\
-	yelpmarshal.list						\
+	yelp-marshal.list						\
 	$(server_in_files)						\
 	$(server_DATA)
 
