Added ms to ALL_LINGUAS. Added Malay Translation by Mohamad Afifi Omar
2002-01-22  Hasbullah Bin Pit <sebol@ikhlas.com>

        * configure.in: Added ms to ALL_LINGUAS.
        * po/ms.po: Added Malay Translation by
          Mohamad Afifi Omar <mr_mohd_afifi@yahoo.com> and me.

--- a/configure.in
+++ b/configure.in
@@ -28,7 +28,7 @@ GETTEXT_PACKAGE=yelp
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
 
-ALL_LINGUAS="az de es nl no lv pt sk sv tr uk wa"
+ALL_LINGUAS="az de es ms nl no lv pt sk sv tr uk wa"
 AM_GLIB_GNU_GETTEXT
 
 if test "x$prefix" = "xNONE"; then
