Thanks to Laszlo PETER <Laszlo.Peter@ireland.sun.com> for the following
2002-01-26  Mikael Hallendal  <micke@codefactory.se>

        * Thanks to Laszlo PETER <Laszlo.Peter@ireland.sun.com> for the
	  following patches.

	* src/yelp-view-toc.c:
	(yelp_view_toc_write_header): buildfixes when not using gcc.
	(yelp_view_toc_start): dito

	* src/yelp-html.c: build fixes when not using glibc.

	* configure.in: make yelp build with other compilers than GCC.

--- a/configure.in
+++ b/configure.in
@@ -19,7 +19,9 @@ AM_PATH_GLIB_2_0
  
 dnl NOTE : it appears that some systems do not like it when you use line
 dnl        continuation charactes to split CFLAGS into readable chunks
-CFLAGS="$CFLAGS -Wall -Wno-uninitialized -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith	 -Wno-sign-compare -Wsign-promo"
+if test "x$GCC" = "xyes"; then
+   CFLAGS="$CFLAGS -Wall -Wno-uninitialized -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith	 -Wno-sign-compare -Wsign-promo"
+fi
 
 AC_SUBST(CFLAGS)
 AC_SUBST(LDFLAGS)
