Added missing file. Updated Swedish translation.
2002-01-30  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added missing file.
	* sv.po: Updated Swedish translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,5 +13,6 @@ src/yelp-section.c
 src/yelp-util.c
 src/yelp-view-content.c
 src/yelp-view-index.c
+src/yelp-view-toc.c
 src/yelp-window.c
 yelp.desktop.in
