Renname stuff to "gnome-help".
2002-01-31  Satan  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-help.desktop.in:
	* src/Makefile.am:
	* yelp.desktop.in:

	Renname stuff to "gnome-help".

	Because I'm a boring kind of guy.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS = src po
 
 @INTLTOOL_DESKTOP_RULE@
 
-DESKTOP_IN_FILES=yelp.desktop.in
+DESKTOP_IN_FILES=gnome-help.desktop.in
 DESKTOP_FILES=$(DESKTOP_IN_FILES:.desktop.in=.desktop)
 
 Applicationsdir = $(datadir)/applications
