--- a/gnome-help.desktop.in
+++ b/gnome-help.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=Help
 _Comment=Get help with GNOME
-Exec=yelp
+Exec=gnome-help
 Icon=gnome-help.png
 Terminal=0
 Type=Application
