--- a/yelp.desktop.in
+++ b/yelp.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=Help
 _Comment=Get help with GNOME
-Exec=gnome-help
+Exec=yelp
 Icon=gnome-help.png
 Terminal=0
 Type=Application
