Remove old gnome-help binary, if any.
2002-02-13  Alex Larsson  <alexl@redhat.com>

	* src/Makefile.am (install-local):
	Remove old gnome-help binary, if any.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,7 @@ INCLUDES =								\
 bin_PROGRAMS = yelp
 
 install-local:
+	rm -f $(bindir)/gnome-help
 	ln -s yelp $(bindir)/gnome-help
 
 yelp-marshal.h: yelp-marshal.list
