rename install-local since automake doesn't like it
2002-02-13  jacob berkman  <jacob@ximian.com>

	* src/Makefile.am (install-exec-local): rename install-local since
	automake doesn't like it

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,7 @@ INCLUDES =								\
 
 bin_PROGRAMS = yelp
 
-install-local:
+install-exec-local:
 	rm -f $(bindir)/gnome-help
 	ln -s yelp $(bindir)/gnome-help
 
