Remove unsupported #ifdef ENABLE_NLS stuff.
2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>

	* src/yelp-main.c: Remove unsupported #ifdef ENABLE_NLS stuff.

--- a/src/.cvsignore
+++ b/src/.cvsignore
@@ -3,7 +3,7 @@ Makefile.in
 .deps
 .libs
 *.o
-yelp
+gnome-help
 ghelp-test
 libvfs-help.la
 *.lo
@@ -13,5 +13,3 @@ GNOME_Yelp.server
 gnome_yelp_idl_stamp
 yelp-marshal.c
 yelp-marshal.h
-
-
