--- a/src/.cvsignore
+++ b/src/.cvsignore
@@ -3,7 +3,6 @@ Makefile.in
 .deps
 .libs
 *.o
-gnome-help
 ghelp-test
 libvfs-help.la
 *.lo
@@ -13,3 +12,4 @@ GNOME_Yelp.server
 gnome_yelp_idl_stamp
 yelp-marshal.c
 yelp-marshal.h
+yelp
