--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,6 +31,7 @@ yelp_SOURCES =								\
 	yelp-base.c		yelp-base.h				\
 	yelp-history.c		yelp-history.h				\
 	yelp-html.c		yelp-html.h				\
+	yelp-index-model.c	yelp-index-model.h			\
 	yelp-info.c		yelp-info.h				\
 	yelp-main.c							\
 	yelp-man.c		yelp-man.h				\
