--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,13 +44,7 @@ yelp_SOURCES =								\
 	yelp-window.c 		yelp-window.h
 
 yelp_LDADD =								\
-	$(YELP_LIBS)							\
-	libgtktreemodelfilter.la
-
-noinst_LTLIBRARIES = libgtktreemodelfilter.la
-
-libgtktreemodelfilter_la_SOURCES =					\
-	gtktreemodelfilter.c	gtktreemodelfilter.h
+	$(YELP_LIBS)
 
 gnome_yelp_idl_sources =						\
 	GNOME_Yelp-stubs.c						\
