Removed non-existing file.
2002-03-02  Ole Laursen  <olau@hardworking.dk>

	* POTFILES.in: Removed non-existing file.

	* da.po: Updated Danish translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,6 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
-src/GNOME_Yelp.server.in
-src/gtktreemodelfilter.c
+src/GNOME_Yelp.server.in.h
 src/yelp-base.c
 src/yelp-history.c
 src/yelp-html.c
@@ -15,4 +14,4 @@ src/yelp-view-content.c
 src/yelp-view-index.c
 src/yelp-view-toc.c
 src/yelp-window.c
-yelp.desktop.in
+yelp.desktop.in.h
