conform with the Yelp coding style.
2002-03-03  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-info.c: conform with the Yelp coding style.

	* src/yelp-man.c: same

	* configure.in (GNOMELOCALEDIR): depend on a certain number of
	  libgnome, will update this when new libgnome get's released.

--- a/configure.in
+++ b/configure.in
@@ -40,6 +40,7 @@ AC_DEFINE_UNQUOTED(GNOMELOCALEDIR, "$GNOMELOCALEDIR")
 
 PKG_CHECK_MODULES(YELP, libgtkhtml-2.0 >= 1.99.2	\
 			gnome-vfs-2.0 >= 1.1		\
+			libgnome-2.0 >= 1.112.0		\
 			libgnomeui-2.0 >= 1.103.0	\
 			libbonobo-2.0 >= 1.108.0)
 
