- use GError to signal errors while parsing document. Still needs to be
2002-04-14  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-db2html.c:
	- use GError to signal errors while parsing document. Still needs
	  to be added to above layers.
	- don't leek the stylesheet name.

	* src/yelp-error.[ch]: added.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,7 @@ yelp_SOURCES =								\
 	yelp-marshal.c		yelp-marshal.h				\
 	yelp-base.c		yelp-base.h				\
 	yelp-db2html.c		yelp-db2html.h				\
+	yelp-error.c		yelp-error.h				\
 	yelp-history.c		yelp-history.h				\
 	yelp-html.c		yelp-html.h				\
 	yelp-index-model.c	yelp-index-model.h			\
